Bug 421486, automatic unwanted scrolling, r+sr=sicking